Updated new letter signup process to page redirect

--- a/email-list-thankyou.html
+++ b/email-list-thankyou.html
@@ -106,7 +106,7 @@
       <!-- Hot tours-->
       <section class="section section-sm bg-default">
         <div class="container">
-          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Trending Tours</span></h3>
+          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Thank You For Joining Our Mailing List</span></h3>
           <div class="row row-sm row-40 row-md-50">
             <div class="col-sm-12 col-md-12  col-lg-12 wow fadeInRight">
               <p class="product-big-text">
