--- a/senegal.html
+++ b/senegal.html
@@ -93,6 +93,9 @@
                     </li>
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="tours.html">Tours</a>
                     </li>
+                    <li class="rd-nav-item">
+                      <a class="rd-nav-link" href="about.html">Why Choose Us</a>
+                    </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="https://square.link/u/T758e8mM">Make A Payment</a>
                     </li>
                     <li class="rd-nav-item">
