Updated dates and trending tours

--- a/about.html
+++ b/about.html
@@ -192,14 +192,14 @@
                         services while maintaining the best tour prices.
                         
                         <br><br>We are &quot;Your Gateway to Africa&quot; offering travel and tour packages that allow you to
-                        experience the best of Africa at affordable prices. <a href="tours.html">View our tours.</a> Travel with us to:
+                        experience the best of Africa at affordable prices. <a href="tours.html"><strong style="color: black;">View our tours.</strong></a> Travel with us to:
                         <br>-&gt; Ghana
                         <br>-&gt; Egypt
                         <br>-&gt; Senegal
                         <br>-&gt; Ghana, Togo and Benin
                         
                         <br><br>We specialize in group tours and will customize tours to meet your interests and time
-                        constraints. <a class="link-phone" href="tel:+18478939304">Click Here To Call Us For A Quote</a>
+                        constraints. <a class="link-phone" href="tel:+18478939304"><strong style="color: black;">Click Here To Call Us For A Quote</strong></a>
                         <br><br>For the experience of a life time and memories you will never forget, travel to Africa
                         with us.
                       </p>
