--- a/email-list-thankyou.html
+++ b/email-list-thankyou.html
@@ -133,7 +133,7 @@
         <div class="container">
           <div class="row row-sm row-40 row-md-50">
             <div class="col-sm-12 col-md-12  col-lg-12 wow fadeInRight">
-              <p class="product-big-text" style="text-align: left;">
+              <p class="product-big-text" style="text-align: left; color: black;">
                 We will send you our <strong>monthly newsletter with tour updates, exciting new tours and discount offers</strong>.
 
                 African Connections looks forward to hosting you on one of our African tours soon.
@@ -147,41 +147,23 @@
         <br><br>
          <div class="container">
           <div class="row row-30 justify-content-center">
-            <p class="product-big-text" style="text-align: left;">
-              We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. 
-              Tour African with us and prepare to be amazed. 
-             </p>
-             <br><br>
-                <div class="col-sm-8 col-md-6 col-lg-3">
+            <div class="col-sm-8 col-md-6 col-lg-6">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word;">Best Prices</p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 16px;"><strong>Exceptional Service</strong></span><br>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</p>
                 </div>
               </article>
             </div>
-            <div class="col-sm-8 col-md-6 col-lg-3">
+
+            <div class="col-sm-8 col-md-6 col-lg-5">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word;">Flexible Payment Plans</p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 16px;"><strong>Best Prices & Flexible Payment Plans</strong></span><br>Reserve your spot on any tour with only a $250 deposit. <br><br> We offer affordable installment payment plans to fit every budget.</p>
                 </div>
               </article>
             </div>
-            <div class="col-sm-8 col-md-6 col-lg-3">
-              <article class="box-contacts">
-                <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word;">Exceptional Service</p>
-                </div>
-              </article>
-            </div>
-            <a href="about.html">
-              <div class="col-sm-8 col-md-6 col-lg-3">
-                <article class="box-contacts">
-                  <div class="box-contacts-body" >
-                    <p class="box-contacts-link" style="word-wrap: break-word;"><a href="about.html">Learn More</a></p>
-                  </div>
-                </article>
-              </div>
-            </a>
+            <p class="box-contacts-link" style="word-wrap: break-word;"><a href="about.html"><strong>Learn More</strong></a></p>
+
           </div>
         </div>
       </section>
