Updated pictures for egypt and senegal tours

--- a/email-list-thankyou.html
+++ b/email-list-thankyou.html
@@ -134,9 +134,9 @@
           <div class="row row-sm row-40 row-md-50">
             <div class="col-sm-12 col-md-12  col-lg-12 wow fadeInRight">
               <p class="product-big-text" style="text-align: left; color: black;">
-                We will send you our <strong>monthly newsletter with tour updates, exciting new tours and discount offers</strong>.
+                <strong>We will send you our monthly newsletter with tour updates, exciting new tours and discount offers.
 
-                African Connections looks forward to hosting you on one of our African tours soon.
+                African Connections looks forward to hosting you on one of our African tours soon.</strong>
                </p>
             </div>
           </div>
@@ -150,7 +150,7 @@
             <div class="col-sm-8 col-md-6 col-lg-6">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 16px;"><strong>Exceptional Service</strong></span><br>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 20px;"><strong>Exceptional Service</strong></span><br><br><strong>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</strong></p>
                 </div>
               </article>
             </div>
@@ -158,7 +158,7 @@
             <div class="col-sm-8 col-md-6 col-lg-5">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 16px;"><strong>Best Prices & Flexible Payment Plans</strong></span><br>Reserve your spot on any tour with only a $250 deposit. <br><br> We offer affordable installment payment plans to fit every budget.</p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 20px;"><strong>Best Prices & Flexible Payment Plans</strong></span><br><br><strong>Reserve your spot on any tour with only a $250 deposit. <br><br> We offer affordable installment payment plans to fit every budget.</strong></p>
                 </div>
               </article>
             </div>
