--- a/egypt.html
+++ b/egypt.html
@@ -159,8 +159,8 @@
 
                         <br><br>
                         <br><br>
-                        <strong>First Tour Date:</strong> March 1st - 12th 2024
-                        <br><strong>Second Tour Date:</strong> October 1st - 12th 2024 
+                        <strong>First Tour Date:</strong> 1st - 12th October 2024
+                        <br><strong>Second Tour Date:</strong> 30th September - 11th October 2025
                         <br><br>
                         <strong>Price: </strong>Only $5,500 per person, with double room occupancy, with air-fare from New York
 
