--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="blackhistory.html">Black History Month,<br>Return To The Motherland Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html">13th - 24th February 2024</a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>13th - 24th February 2024</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         February is Black History Month and as we all know; Black History begins in Africa! We invite you to come to Ghana to explore this country’s unique links to African-American history.
@@ -338,7 +338,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="egypt.html">Egypt African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html">1st - 12th March 2024 || October 1st - 12th 2024</a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>1st - 12th October 2024 || 30th September - 11th October 2025</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Egypt "Land Of Pharoahs" African Heritage Tour includes an unforgettable 4-Day luxury cruise on the River Nile; 
@@ -366,7 +366,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="#">Return to the Motherland,<br> African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                      <div class="product-big-rating"><a class="product-big-reviews" href="#">18th - 29th June 2024 || 10th - 21st September 2024</a></div>
+                      <div class="product-big-rating"><a class="product-big-reviews" href="#"><strong>18th - 29th June 2024 || 10th - 21st September 2024</strong></a></div>
                       <p class="product-big-text">
                         Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience two of Ghana’s most exciting of such events.
                       </p>
@@ -569,6 +569,23 @@
     }
 
     </script>
+    <script  type="text/javascript">
+      var config = {
+        phone :" 1(708)557-50-41",
+        call :"Talk to us",
+        position :"ww-right",
+        size : "ww-normal",
+        text : "Hi. I would like to learn more about your tours.",
+        type: "ww-extended",
+        brand: "African Connections",
+        subtitle: "",
+        welcome: ""
+      };
+      var proto = document.location.protocol, host = "cloudfront.net", url = proto + "//d3kzab8jj16n2f." + host;
+        var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = url + "/v2/main.js";
 
+        s.onload = function () { tmWidgetInit(config) };
+        var x = document.getElementsByTagName("script")[0]; x.parentNode.insertBefore(s, x);
+    </script>
   </body>
 </html>
