--- a/tours.html
+++ b/tours.html
@@ -119,7 +119,7 @@
           <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Trending Tours</span></h3>
           <div class="row row-sm row-40 row-md-50">
             <div class="col-sm-12 col-md-12  col-lg-12 wow fadeInRight">
-              <p class="product-big-text">
+              <p class="product-big-text" style="color: black;">
                 We are <strong>"Your Gateway to Africa"</strong> offering travel and tour packages that allow you to experience the best of Africa. 
                 <br><strong>We can customize a tour to meet your individual interests and time constraints. Whether you are interested in a cultural or historical tour; nature and eco-tourism; or just want a leisurely beach vacation; 
                 whatever your interests, we can customize a tour for you that will be the experience of a lifetime.</strong>
@@ -135,7 +135,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="blackhistory.html">Black History Month,<br>Return To The Motherland Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html">13th - 24th February 2024</a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>13th - 24th February 2024</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         February is Black History Month and as we all know; Black History begins in Africa! We invite you to come to Ghana to explore this country’s unique links to African-American history.
@@ -160,7 +160,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="senegal.html">Senegal, African Culture &<br>Safari Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="senegal.html">6th - 16th April 2024 </a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="senegal.html"><strong>6th - 16th April 2024</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Senegal tour includes visits to Dakar and St. Louis, Senegal’s most modern cities as well as visits to some of Senegal’s most isolated villages, where life has remained virtually unchanged for centuries.                      </p>
@@ -184,7 +184,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br> African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html">18th - 29th June 2024 || 10th - 21st September 2024</a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html"><strong>18th - 29th June 2024 || 10th - 21st September 2024</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience two of Ghana’s most exciting of such events.
@@ -211,7 +211,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="egypt.html">Egypt African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html">1st - 12th October 2024 || 30th September - 11th October 2025</a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>1st - 12th October 2024 || 30th September - 11th October 2025</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Egypt "Land Of Pharoahs" African Heritage Tour includes an unforgettable 4-Day luxury cruise on the River Nile; 
@@ -241,7 +241,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="panafest.html">PANAFEST, African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="panafest.html">July 23rd - August 2nd 2025<br>11 Days - 10 Nights</a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="panafest.html"><strong>July 23rd - August 2nd 2025<br>11 Days - 10 Nights</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         The Pan African Historical Theatre Festival (PANAFEST) is a biennial cultural festival of art and culture attended by people of African 
@@ -251,7 +251,7 @@
                       </p>
                       <a class="button button-black-outline button-ujarak" href="https://square.link/u/T758e8mM">Buy This Tour</a>
                       <a class="button button-secondary-outline button-pipaluk"  href="panafest.html">Read More</a> <!-- href="https://www.africanconnections.biz/new/travel/_1panafest_and_emancipation_day.php" -->
-                      <div class="product-big-price-wrap"><span class="product-big-price">$3,999</span></div>
+                      <div class="product-big-price-wrap"><span class="product-big-price">$3,699</span></div>
                     </div>
                   </div>
                 </div>
