--- a/index.html
+++ b/index.html
@@ -569,22 +569,7 @@
     }
 
     </script>
-    <script  type="text/javascript">
-      var config = {
-        phone :" 1(708)557-50-41",
-        call :"Talk to us",
-        position :"ww-right",
-        size : "ww-normal",
-        text : "Hi. I would like to learn more about your tours.",
-        type: "ww-extended",
-        brand: "African Connections",
-        subtitle: "",
-        welcome: ""
-      };
-      var proto = document.location.protocol, host = "cloudfront.net", url = proto + "//d3kzab8jj16n2f." + host;
-      var s = document.createElement("script"); s.type = "text/javascript"; s.async = true; s.src = url + "/v2/main.js";
-      s.onload = function () { tmWidgetInit(config) };
-      var x = document.getElementsByTagName("script")[0]; x.parentNode.insertBefore(s, x);
-    </script>
+    <div class="elfsight-app-56c0baaf-15bf-4139-ae0f-952721a02fab"></div>
+
   </body>
 </html>
