Updated whatsapp chat bubble to elfsight widget and started blog list page

--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
     }
 
     </script>
-    <!--<div class="elfsight-app-56c0baaf-15bf-4139-ae0f-952721a02fab"></div>-->
-    <script src="https://dashboard.chatfuel.com/integration/landing-wa-widget.js" async defer data-prefilled="I would like to learn more about your tours" data-welcome="Hello, how can I help you today?" data-phone="17085575041"></script>
+    <div class="elfsight-app-56c0baaf-15bf-4139-ae0f-952721a02fab"></div>
+    <!--<script src="https://dashboard.chatfuel.com/integration/landing-wa-widget.js" async defer data-prefilled="I would like to learn more about your tours" data-welcome="Hello, how can I help you today?" data-phone="17085575041"></script>-->
 
   </body>
 </html>
