--- a/reviews.html
+++ b/reviews.html
@@ -267,5 +267,7 @@
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/reviews.js"></script>
+    <div class="elfsight-app-56c0baaf-15bf-4139-ae0f-952721a02fab"></div>
+
   </body>
 </html>
