Added facebook and instagram links to footers

--- a/blackhistory.html
+++ b/blackhistory.html
@@ -100,7 +100,7 @@
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="tours.html">Tours</a>
                     </li>
                     <li class="rd-nav-item">
-                      <a class="rd-nav-link" href="about.html">Why Choose Us</a>
+                      <a class="rd-nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="rd-nav-item">
                       <a class="rd-nav-link" href="reviews.html">Reviews</a>
@@ -311,27 +311,22 @@
               <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                 <div class="oh-desktop">
                   <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Phone</h6>
+                    <h6 class="text-spacing-100 text-uppercase">Contact</h6>
                     <ul class="footer-contacts d-inline-block d-sm-block">
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                          <div class="unit-body"><a class="link-phone" href="tel:+18478939304">+1 (847) 893-9304</a></div>
+                          <div class="unit-body">
+                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                          </div>
                         </div>
                       </li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
-                <div class="oh-desktop">
-                  <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Mail</h6>
-                    <ul class="footer-contacts d-inline-block d-sm-block">
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
-                          <div class="unit-body"><a class="link-aemail" href="mailto:info@africanconnections-usa.com">info@africanconnections-usa.com</a></div>
+                          <div class="unit-body">
+                            <a class="link-aemail" href="mailto:info@africanconnections-usa.com">info@africanconnections-usa.com</a>
+                          </div>
                         </div>
                       </li>
                     </ul>
@@ -347,6 +342,27 @@
                           <div class="unit-left"><span class="icon fa fa-location-arrow"></span></div>
                           <div class="unit-body"><a class="link-location" href="#">160 Bartlett Plaza Number 8428
                             <br>Bartlett, Illinois 60103</a></div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
+                <div class="oh-desktop">
+                  <div class="wow slideInRight" data-wow-delay="0s">
+                    <h6 class="text-spacing-100 text-uppercase">Social</h6>
+                    <ul class="footer-contacts d-inline-block d-sm-block">
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricaConnectionsUSA</a></div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-instagram"></span></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://instagram.com/African_connections">African_connections</a></div>
                         </div>
                       </li>
                     </ul>
@@ -394,7 +410,7 @@
               </div>
               <div class="col-sm-6 col-md-4 order-sm-first">
                 <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections USA</span>. All Rights Reserved.</p>
+                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
                 <p class="rights"><a href="https://www.africanconnections.biz/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
