--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                       <a class="rd-nav-link" href="tours.html">Tours</a>
                     </li>
                     <li class="rd-nav-item">
-                      <a class="rd-nav-link" href="about.html">Why Choose Us</a>
+                      <a class="rd-nav-link" href="about.html">About Us</a>
                     </li>
                     <li class="rd-nav-item">
                       <a class="rd-nav-link" href="reviews.html">Reviews</a>
@@ -276,7 +276,10 @@
       <!-- Hot tours-->
       <section class="section section-sm bg-default">
          <div class="container">
+
+          <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Why Choose Us</span></h3>
           <div class="row row-30 justify-content-center">
+
             <div class="col-sm-8 col-md-6 col-lg-6">
               <article class="box-contacts">
                 <div class="box-contacts-body">
@@ -404,7 +407,7 @@
           <div class="row row-50 align-items-center justify-content-center justify-content-xl-between">
             <div class="col-lg-12" data-wow-delay=".1s">
               <div>
-                <h3>Why Choose Us</h3>
+                <h3>About Us</h3>
                 <!-- Bootstrap tabs-->
                 <div class="tabs-custom tabs-horizontal tabs-line tabs-line-big tabs-line-style-2 text-center text-md-left" id="tabs-7">
                   <!-- Nav tabs-->
@@ -479,12 +482,18 @@
               <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                 <div class="oh-desktop">
                   <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Get Tour Updates</h6>
+                    <h6 class="text-spacing-100 text-uppercase">Social</h6>
                     <ul class="footer-contacts d-inline-block d-sm-block">
                       <li>
                         <div class="unit">
-                          <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
-                          <div class="unit-body"><a class="link-aemail" href="mailto:info@africanconnections-usa.com">info@africanconnections-usa.com</a></div>
+                          <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricaConnectionsUSA</a></div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-instagram"></span></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://instagram.com/African_connections">African_connections</a></div>
                         </div>
                       </li>
                     </ul>
