Updated image for blog

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
       <section class="breadcrumbs-custom-inset">
         <div class="breadcrumbs-custom context-dark bg-overlay-60">
           <div class="container">
-            <h2 class="breadcrumbs-custom-title">ABOUT US</h2>
+            <h2 class="breadcrumbs-custom-title">WE KNOW AFRICA BEST</h2>
             <ul class="breadcrumbs-custom-path">
             </ul>
           </div>
@@ -326,7 +326,7 @@
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
-                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricaConnectionsUSA</a></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricanConnectionsUSA</a></div>
                         </div>
                       </li>
                       <li>
