--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             <div class="col-sm-8 col-md-6 col-lg-6">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 16px;"><strong>Exceptional Service</strong></span><br>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px; font: bolder;"><!--<img src="img/icons/thumbs-up.png" alt=""  width="50" height="50"/><br>--><span style="word-wrap: break-word; font-size: 20px;"><strong>Exceptional Service</strong></span><br><br><strong>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</strong></p>
                 </div>
               </article>
             </div>
@@ -291,7 +291,7 @@
             <div class="col-sm-8 col-md-6 col-lg-5">
               <article class="box-contacts">
                 <div class="box-contacts-body">
-                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;"><span style="word-wrap: break-word; font-size: 16px;"><strong>Best Prices & Flexible Payment Plans</strong></span><br>Reserve your spot on any tour with only a $250 deposit. <br><br> We offer affordable installment payment plans to fit every budget.</p>
+                  <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;  font: bolder;"><span style="word-wrap: break-word; font-size: 20px;"><strong>Best Prices & Flexible Payment Plans</strong></span><br><br><strong>Reserve your spot on any tour with only a $250 deposit. <br><br> We offer affordable installment payment plans to fit every budget.</strong></p>
                 </div>
               </article>
             </div>
@@ -417,13 +417,13 @@
                   <div class="tab-content">
                     <div class="tab-pane fade show active" id="tabs-7-1">
                       <p>
-                        <strong>With over 20 years of Africa tour experience-- We know Africa Best!</strong>
+                        <strong>With over 20 years of Africa tour experience-- We know Africa Best!
                         
                         <br><br>African Connections North America (AC-USA) is a U.S. based company that is owned and
                         operated by African Americans who have traveled extensively in Africa for decades and
                         who have lived in Africa either full or part time for over 20 years. 
                         <br><br><a href="about.html">Read More</a>
-                   
+                      </strong>
                       </p>
                     </div>
                   </div>
@@ -487,7 +487,7 @@
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
-                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricaConnectionsUSA</a></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricanConnectionsUSA</a></div>
                         </div>
                       </li>
                       <li>
