--- a/email-list-thankyou.html
+++ b/email-list-thankyou.html
@@ -93,7 +93,7 @@
                   <ul class="rd-navbar-nav">
                     <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="tours.html">Tours</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="tours.html">Tours</a>
                     </li>
                     <li class="rd-nav-item">
                       <a class="rd-nav-link" href="about.html">About Us</a>
@@ -222,7 +222,7 @@
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
-                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricaConnectionsUSA</a></div>
+                          <div class="unit-body"><a class="link-aemail" target="_blank" href="https://facebook.com/AfricanConnectionsUSA">AfricanConnectionsUSA</a></div>
                         </div>
                       </li>
                       <li>
