Added ghana home page and did a lot I forgot to commit

--- a/blackhistory.html
+++ b/blackhistory.html
@@ -183,7 +183,7 @@
                         <br><strong>—to DEMONSTRATE THE STRENGTH OF THE AFRICAN SPIRIT AND THE RESILENCE OF THE AFRICAN FAMILY.</strong>
                         
                         <br><br>
-                        <strong>Date: </strong>February 13th - February 24th 2024 
+                        <strong>Date: </strong>February 13th - February 24th 2024 <strong>(12 Days)</strong>
                         <br><br>
                         <strong>Price: </strong>Only $3,499 per person, with double room occupancy, without air-fare 
 
