--- a/egypt.html
+++ b/egypt.html
@@ -178,8 +178,8 @@
 
                         <br><br>
                         <br><br>
-                        <strong>First Tour Date:</strong> 1st - 12th October 2024
-                        <br><strong>Second Tour Date:</strong> 30th September - 11th October 2025
+                        <strong>First Tour Date:</strong> October 1st - 12th 2024 <strong>(12 Days)</strong>
+                        <br><strong>Second Tour Date:</strong> September 30th - October 11th 2025 <strong>(12 Days)</strong>
                         <br><br>
                         <strong>Price: </strong>Only $5,500 per person, with double room occupancy, with air-fare from New York
 
