--- a/email-list-thankyou.html
+++ b/email-list-thankyou.html
@@ -162,6 +162,12 @@
         </div>
 
         <br><br>
+        <div class="col-sm-6 col-md-12 wow fadeInRight">
+          <div class="elfsight-app-6f3643ee-085f-4fec-8390-c389d1019520"></div>           
+        </div>
+
+        <br><br>
+        
         <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Why Choose Us</span></h3>
         <br><br>
          <div class="container">
