--- a/panafest.html
+++ b/panafest.html
@@ -176,7 +176,7 @@
                         celebrate the music, art and theatre of the African experience. 
                         
                         <br><br>
-                        <strong>Date: </strong>23rd July – 2nd August 2025 
+                        <strong>Date: </strong> July 23rd – August 2nd 2025 <strong>(11 Days)</strong>
                         <br><br>
                         <strong>Price: </strong> Only $3,699 per person, with double room occupancy, without air-fare 
 
