--- a/senegal.html
+++ b/senegal.html
@@ -174,7 +174,7 @@
                         Goree Island for over 300 years was one of the largest slave trading centers in West Africa, 
                         with millions of captured Africans being warehoused there as they waited for the ships that would take them to the Americas.
                         <br><br>
-                        <strong>Date: </strong>April 6th - 16th 2024 
+                        <strong>Date: </strong>April 6th - 16th 2024  <strong>(11 Days)</strong>
                         <br><br>
                         <strong>Price: </strong>Only $5,399 per person, with double room occupancy, with air-fare from New York
 
