--- a/index.html
+++ b/index.html
@@ -209,19 +209,19 @@
       <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-corporate swiper-pagination-style-2" data-loop="true" data-autoplay="5000" data-simulate-touch="true" data-nav="false" data-direction="vertical">
         <div class="swiper-wrapper text-left">
-          <div class="swiper-slide context-dark" data-slide-bg="img/home/1sliderghana.jpg">
+          <div class="swiper-slide context-dark" data-slide-bg="img/home/sliderghana.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
                   <div class="col-md-10">
                     <h6 class="text-uppercase" data-caption-animate="fadeInRight" data-caption-delay="0">The Black Star Of Africa</h6>
-                    <h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100"><span>Visit</span><span class="font-weight-bold"> Ghana</span></h2><a class="button button-default-outline button-ujarak" href="#" data-caption-animate="fadeInLeft" data-caption-delay="0">Book A Tour</a>
+                    <h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100"><span>Visit</span><span class="font-weight-bold"> Ghana</span></h2><a class="button button-default-outline button-ujarak" href="ghana-home.html" data-caption-animate="fadeInLeft" data-caption-delay="0">Book A Tour</a>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="swiper-slide context-dark" data-slide-bg="img/home/2slideregypt.jpg">
+          <div class="swiper-slide context-dark" data-slide-bg="img/home/slideregypt1.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
@@ -233,7 +233,7 @@
               </div>
             </div>
           </div>
-          <div class="swiper-slide context-dark" data-slide-bg="img/home/3slidersenegal.jpg">
+          <div class="swiper-slide context-dark" data-slide-bg="img/home/slidersenegal.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
                 <div class="row">
@@ -257,7 +257,7 @@
                 <div class="col-md-4 wow fadeInDown col-9" data-wow-delay=".2s">
                   <ul class="list-marked-2 box-categories-list">
                     <li>
-                      <a href="tours.html">
+                      <a href="ghana-home.html">
                         <img src="img/home/1overlayonslider_ghana.jpg" alt="" width="368" height="420"/>
                       <h5 class="box-categories-title">Ghana</h5>
                       </a>
@@ -332,7 +332,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="blackhistory.html">Black History Month,<br>Return To The Motherland Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>13th - 24th February 2024</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>13th - 24th February 2024<br>12 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         February is Black History Month and as we all know; Black History begins in Africa! We invite you to come to Ghana to explore this country’s unique links to African-American history.
@@ -359,7 +359,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="egypt.html">Egypt African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>1st - 12th October 2024 || 30th September - 11th October 2025</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>October 1st - 12th 2024 || September 30th - October 11th 2025<br>12 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Egypt "Land Of Pharoahs" African Heritage Tour includes an unforgettable 4-Day luxury cruise on the River Nile; 
@@ -382,14 +382,14 @@
               <!-- Product Big-->
               <article class="product-big">
                 <div class="unit flex-column flex-md-row align-items-md-stretch">
-                  <div class="unit-left"><a class="product-big-figure" href="#"><img src="img/home/2hottours.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-left"><a class="product-big-figure" href="returntomotherland.html"><img src="img/home/2hottours.jpg" alt="" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
-                      <h5 class="product-big-title"><a href="#">Return to the Motherland,<br> African Festival Tour</a></h5>
+                      <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br> African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                      <div class="product-big-rating"><a class="product-big-reviews" href="#"><strong>18th - 29th June 2024 || 10th - 21st September 2024</strong></a></div>
+                      <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html"><strong>October 22nd - November 1st 2024<br>11 Days</strong></a></div>
                       <p class="product-big-text">
-                        Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience two of Ghana’s most exciting of such events.
+                        Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience one of Africa's most exciting events.
                       </p>
                       
                       <a class="button button-black-outline button-ujarak" href="https://square.link/u/T758e8mM">Buy This Tour</a>
