--- a/reviews.html
+++ b/reviews.html
@@ -16,7 +16,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <title>Tours</title>
+    <title>Review & Why Choose Us</title>
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -176,6 +176,29 @@
 
           </div>
         </div>
+
+        <div class="container">
+
+         <h3 class="oh-desktop"><span class="d-inline-block wow slideInDown">Why Choose Us</span></h3>
+         <div class="row row-30 justify-content-center">
+
+           <div class="col-sm-8 col-md-6 col-lg-6">
+             <article class="box-contacts">
+               <div class="box-contacts-body">
+                 <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px; font: bolder;"><!--<img src="img/icons/thumbs-up.png" alt=""  width="50" height="50"/><br>--><span style="word-wrap: break-word; font-size: 20px;"><strong>Exceptional Service</strong></span><br><br><strong>We pride ourselves on our "concierge" service. We will assist you as you prepare for your trip and we are with you on the ground everyday of your visit to Africa. <br><br>Tour Africa with us and prepare to be amazed!!!</strong></p>
+               </div>
+             </article>
+           </div>
+
+           <div class="col-sm-8 col-md-6 col-lg-5">
+             <article class="box-contacts">
+               <div class="box-contacts-body">
+                 <p class="box-contacts-link" style="word-wrap: break-word; font-size: 14px;  font: bolder;"><span style="word-wrap: break-word; font-size: 20px;"><strong>Best Prices & Flexible Payment Plans</strong></span><br><br><strong>Reserve your spot on any tour with only a $250 deposit. <br><br> We offer affordable installment payment plans to fit every budget.</strong></p>
+               </div>
+             </article>
+           </div>
+         </div>
+       </div>
       </section>
       <!-- Discover New Horizons-->
       <!--	Instagrram wondertour-->
