--- a/tours.html
+++ b/tours.html
@@ -155,7 +155,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="blackhistory.html">Black History Month,<br>Return To The Motherland Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>13th - 24th February 2024</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="blackhistory.html"><strong>February 13th - 24th 2024<br>12 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         February is Black History Month and as we all know; Black History begins in Africa! We invite you to come to Ghana to explore this country’s unique links to African-American history.
@@ -180,7 +180,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="senegal.html">Senegal, African Culture &<br>Safari Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="senegal.html"><strong>6th - 16th April 2024</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="senegal.html"><strong>March 8th - 18th 2025<br>11 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Senegal tour includes visits to Dakar and St. Louis, Senegal’s most modern cities as well as visits to some of Senegal’s most isolated villages, where life has remained virtually unchanged for centuries.                      </p>
@@ -204,7 +204,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br> African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html"><strong>18th - 29th June 2024 || 10th - 21st September 2024</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html"><strong>October 22nd - November 1st 2024<br>11 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience two of Ghana’s most exciting of such events.
@@ -231,7 +231,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="egypt.html">Egypt African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>1st - 12th October 2024 || 30th September - 11th October 2025</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="egypt.html"><strong>October 1st - 12th 2024 || September 30th - October 11th 2025<br>12 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Our Egypt "Land Of Pharoahs" African Heritage Tour includes an unforgettable 4-Day luxury cruise on the River Nile; 
@@ -243,6 +243,30 @@
                       <a class="button button-secondary-outline button-pipaluk" href="egypt.html" target="_blank">Read More</a>
 
                       <div class="product-big-price-wrap"><span class="product-big-price">$5,500</span></div>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </div>
+
+            <div class="col-sm-6 col-md-12 wow fadeInLeft">
+              <!-- Product Big-->
+              <article class="product-big">
+                <div class="unit flex-column flex-md-row align-items-md-stretch">
+                  <div class="unit-left"><a class="product-big-figure" href="#"><img src="img/tours/ghana_togo_benin.jpg" alt="" width="600" height="366"/></a></div>
+                  <div class="unit-body">
+                    <div class="product-big-body">
+                      <h5 class="product-big-title"><a href="#">Ghana, Togo, Benin Ouidah Voodoo Festival Tour</a></h5>
+                      <div class="group-sm group-middle justify-content-start">
+                        <div class="product-big-rating"><a class="product-big-reviews" href="#"><strong>Janaury 4th - 17th 2025 <br>14 Days</strong></a></div>
+                      </div>
+                      <p class="product-big-text">
+                      </p>
+                      
+                      <a class="button button-black-outline button-ujarak" href="https://square.link/u/T758e8mM">Buy This Tour</a>
+                      <!--<a class="button button-secondary-outline button-pipaluk" href="#" target="_blank">Read More</a>-->
+
+                      <div class="product-big-price-wrap"><span class="product-big-price">$3,699</span></div>
                     </div>
                   </div>
                 </div>
@@ -261,7 +285,7 @@
                     <div class="product-big-body">
                       <h5 class="product-big-title"><a href="panafest.html">PANAFEST, African Heritage Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="panafest.html"><strong>July 23rd - August 2nd 2025<br>11 Days - 10 Nights</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="panafest.html"><strong>July 23rd - August 2nd 2025<br>11 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         The Pan African Historical Theatre Festival (PANAFEST) is a biennial cultural festival of art and culture attended by people of African 
